fix(my-rdv): mtop too high

--- a/assets/_dev/src/scss/pages/_mes-rdv.scss
+++ b/assets/_dev/src/scss/pages/_mes-rdv.scss
@@ -89,7 +89,6 @@
 
 
   &__list{
-    margin-top: 3rem;
     h3{
       margin-bottom: 1rem;
     }
